education detailsform fixed but error in retriving resumeid'

--- a/projects/seeker/src/lib/dialog/edit/edit.component.css
+++ b/projects/seeker/src/lib/dialog/edit/edit.component.css
@@ -9,12 +9,13 @@
   }
   
   .form {
-    display: flex;
+    display: block;
     padding-top: 6px;
   }
   
   .mat-form-field {
-    font-size: 16px;
+    font-size: 14px;
     flex-grow: 1;
+    
   }
   
