--- a/projects/seeker/src/lib/dialog/delete/delete.component.html
+++ b/projects/seeker/src/lib/dialog/delete/delete.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h3 mat-dialog-title>Are you sure?</h3>
   <div mat-dialog-content>
-    Id: {{data.eduID}}
+    Id: {{data.eduId}}
     <p></p>
     Degree: {{data.degree}}
     <p></p>
