--- a/projects/elogin/src/lib/signup/signup.component.html
+++ b/projects/elogin/src/lib/signup/signup.component.html
@@ -21,7 +21,7 @@
                       </div>
                   </div>
                   <div class="form-group">
-                      <button class="btn btn-primary" type="submit">Login</button>
+                      <button class="btn btn-primary" type="submit" [disabled]="!loginForm.valid">Login</button>
                       <button class="btn btn-warning" [routerLink]="['signup']" >SignUp</button>
                       
                   </div>
