--- a/projects/seeker/src/lib/jobs/jobs.component.html
+++ b/projects/seeker/src/lib/jobs/jobs.component.html
@@ -20,8 +20,8 @@
 
     <mat-card>
       
-      <mat-card-title>Company : {{x.jobProfile}} <div class="button"> <button mat-raised-button color="warn" (click)="applyForJob(x.jobId)">Apply</button> </div> </mat-card-title>
-      <mat-card-content> <i>Role: {{x.companyName}}</i>
+      <mat-card-title>Company : {{x.companyName}} <div class="button"> <button mat-raised-button color="warn" (click)="applyForJob(x.jobId)">Apply</button> </div> </mat-card-title>
+      <mat-card-content> <i>Role: {{x.jobProfile}}</i>
         
 
         <p>
@@ -34,7 +34,7 @@
                 Role Description -> {{x.jobDescription}}
               </mat-panel-description>
             </mat-expansion-panel-header>
-            <p>Company and description should come here
+            <p>
 
             </p>
           </mat-expansion-panel>
