--- a/projects/slogin/src/lib/login/login.component.html
+++ b/projects/slogin/src/lib/login/login.component.html
@@ -40,7 +40,7 @@
                     
                     </div>
                   </mat-form-field>
-        <button mat-raised-button color="primary" class="btn" type="submit" (ngSubmit)="onSubmit(loginForm.value)">Login</button>
+        <button mat-raised-button color="primary" class="btn" type="submit" (ngSubmit)="onSubmit(loginForm.value)" [disabled]="!loginForm.valid">Login</button>
       </form>
     </mat-card-content>
     <mat-card-actions align="end">
