shortlisted candidated fixed

--- a/projects/employeer/src/lib/shortlisted-candidates/shortlisted-candidates.component.html
+++ b/projects/employeer/src/lib/shortlisted-candidates/shortlisted-candidates.component.html
@@ -48,7 +48,7 @@
 
     <mat-cell *matCellDef="let row; let i=index;">
       <button mat-icon-button color="accent">
-        <mat-icon  (click)="deleteShortlist(datas[i].resumeId)">delete</mat-icon>
+        <mat-icon  (click)="deleteShortlist(datas[i].serialno)">delete</mat-icon>
       </button>
     </mat-cell>
   </ng-container>
